--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Hello World</title>
 </head>
 <body>
-<h1>Hellow World</h1>
+<h1>Hello World!</h1>
 </body>
 </html>
 
